--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <h1>Belajar javascript Dasar</h1>
-    <script src="tugas/tugas_pertama.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
